# interceptor

./: .gitattributes  CHANGELOG.md  LICENSE  README.md  setup.cfg  setup.py
interceptor/: config.py  intercept.py  intercepting.py  run.py  whereis.py
interceptor/templates/: cmdline.py  config
