# coding: utf-8
[metadata]
keywords = command line, cmdline, intercept, arguments, args
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
license_files = LICENSE
name = cmd-interceptor
version = 2.2a3
author = Piotr Maślanka
author_email = piotr.maslanka@dronehub.ai
description = A tool to intercept calls to other tools and alter their arguments
url = https://github.com/Dronehub/interceptor
project-urls =
	Code = https://github.com/Dronehub/interceptor
	Issue tracker = https://github.com/Dronehub/interceptor/issues
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: POSIX
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License

[pycodestyle]
max-line-length = 100

[pep8]
max-line-length = 100

[bdist_wheel]
universal = 1

[options]
install_requires =
    satella>=2.16.7
python_requires = !=2.7.*,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
packages =
    interceptor

[options.package_data]
interceptor = templates/cmdline.py, templates/config

[options.entry_points]
console_scripts =
    intercept = interceptor.run:run
